# IoT_Multi-edge-coordination_for-traffic_tracking

./: .dockerignore  .env.example  DOCKER_README.md  Dockerfile  README.md  config_cam.txt  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  requirements.txt  run.txt  run_RTSP.py  setup-docker.sh
C++_Python/: .gitignore  DEPLOYMENT.md  FLATBUFFERS_ANALYSIS.md  FLATBUFFERS_INTEGRATION.md  OPTIMIZATION.md  QUICK_TEST.md  README.md  VERIFICATION.md  WEBRTC_SETUP.md  ZENOH_SETUP.md  docker-compose.edge.yml  docker-compose.yml  mosquitto.conf  run_edge_standalone.sh
C++_Python/center/: main_center.py  requirements.txt
C++_Python/center/backend/api/: main.py
C++_Python/center/backend/core/: balancer.py  mqtt_broker.py
C++_Python/center/frontend/: index.html  package.json  vite.config.js
C++_Python/center/frontend/src/: index.css
C++_Python/center/frontend/src/components/: EdgeMetricsCard.jsx  LoadBalancingPanel.jsx  MultiCameraGrid.jsx
C++_Python/center/frontend/src/pages/: Dashboard.jsx
C++_Python/edge/: BUILD.md  Dockerfile  main_edge.py  main_edge_standalone.py  requirements.txt
C++_Python/edge/configs/: config_nvdsanalytics.txt  config_tracker.txt  dstest_lpr.txt  dstest_yolo.txt  homography.yml
C++_Python/edge/cpp/: CMakeLists.txt  build.sh
C++_Python/edge/cpp/deepstream/: ds_pipeline.cpp  ds_probes.cpp  python_api.cpp  webrtc_sink.cpp
C++_Python/edge/cpp/include/: ds_pipeline.h  ds_probes.h  flatbuffers_serializer.h  frame_serializer.h  webrtc_sink.h  zenoh_client.h
C++_Python/edge/cpp/serialization/: flatbuffers_serializer.cpp
C++_Python/edge/cpp/zenoh/: frame_serializer.cpp  zenoh_client.cpp
C++_Python/edge/frontend/: Dockerfile.frontend  index.html  package.json
C++_Python/edge/frontend/src/: App.jsx  index.css
C++_Python/edge/models/: README.md
C++_Python/edge/python/api/: __init__.py  app.py  main.py
C++_Python/edge/python/core/: __init__.py  coordinator.py  deepstream_wrapper.py  flatbuffers_wrapper.py  monitor.py  mqtt_client.py  shared_memory.py  webrtc_signaling.py
C++_Python/edge/schemas/: metadata.fbs
C++_Python/videos/: README.md
DeepStream-YoLo/: config_infer_primary_yolo11.txt
Python/: run_file.py  run_webrtc.py  speed_gui.py
Python/speedflow/: analystic.py  pipeline_file.py  probes.py
configs/: points_1.yml
deepstream_python_apps/bindings/pyds.egg-info/: PKG-INFO
logs/: speed_log.csv
speedflow/: config_txt.py  draw.py  io_utils.py  pipeline.py  pipeline_file.py  pipeline_webrtc.py  settings.py
webrtc/: README.md  index.html  signaling_server.py
(+2 files in other folders)
